# testproject

figures/: circle.cpp  circle.h  figure.cpp  figure.h  figures.pro  main.cpp  oval.cpp  oval.h  rectangle.cpp  rectangle.h  square.cpp  square.h  triangle.cpp  triangle.h
mtfind/: CMakeLists.txt  main.cpp  worker.cpp  worker.h
